--- a/index.html
+++ b/index.html
@@ -53,14 +53,17 @@
                 <div class="col-lg-8">
                     <div class="row gx-0 bg-white d-none d-lg-flex">
                         <div class="col-lg-7 px-5 text-start">
+                            <a href="mailto:jiweshsoni@gmail.com">
                             <div class="h-100 d-inline-flex align-items-center py-2 me-4">
                                 <i class="fa fa-envelope text-primary me-2"></i>
                                 <p class="mb-0">jiweshsoni@gmail.com</p>
                             </div>
+                        </a>
+                        <a href="tel:+919131172869">
                             <div class="h-100 d-inline-flex align-items-center py-2">
                                 <i class="fa fa-phone-alt text-primary me-2"></i>
                                 <p class="mb-0">+91 91311 72869</p>
-                            </div>
+                            </div></a>
                         </div>
                         <div class="col-lg-5 px-5 text-end">
                             <div class="d-inline-flex align-items-center py-2">
@@ -630,9 +633,9 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>BhilaiZ Style Zone, <br>Sabzi Mondi ke Peeche</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 91311 72869</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>jiweshsoni@gmail.com</p>
+                        <a href='https://www.google.com/maps/@21.2077459,81.4274335,21z'><p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>BhilaiZ Style Zone, <br>Sabzi Mondi ke Peeche</p></a>
+                        <a href="tel:+919131172869"> <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 91311 72869</p></a>
+                        <a href="mailto:jiweshsoni@gmail.com"> <p class="mb-2"><i class="fa fa-envelope me-3"></i>jiweshsoni@gmail.com</p></a>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
