--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                        <a href='https://www.google.com/maps/@21.2077459,81.4274335,21z'><p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>BhilaiZ Style Zone, <br>Sabzi Mondi ke Peeche</p></a>
+                        <a target="_blank" href="https://maps.app.goo.gl/hH9kAcPfcuW7rR4B6"><p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>BhilaiZ Style Zone, <br>Sabzi Mondi ke Peeche</p></a>
                         <a href="tel:+919131172869"> <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 91311 72869</p></a>
                         <a href="mailto:jiweshsoni@gmail.com"> <p class="mb-2"><i class="fa fa-envelope me-3"></i>jiweshsoni@gmail.com</p></a>
                         <div class="d-flex pt-2">
